--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'dagger.hilt.android.plugin'
+    id 'org.jetbrains.kotlin.plugin.serialization' version '1.6.21'
 }
 
 android {
@@ -72,6 +73,13 @@ dependencies {
     implementation 'androidx.databinding:databinding-runtime:7.2.0'
     kapt "com.google.dagger:hilt-android-compiler:2.41"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:2.41"
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlinx-serialization-converter:0.8.0'
+
+    // JetBrains
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json:1.3.3'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test:runner:1.4.0'
